--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/google-map-react": "^2.1.7",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
