--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tiptap/extension-bold": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-document": "^2.0.3",
     "@tiptap/extension-italic": "^2.0.3",
+    "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.3",
     "@tiptap/extension-text": "^2.0.3",
+    "@tiptap/extension-text-align": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
